--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="love-container" id="loveContainer"></div>
   <div class="popup" id="popupBox">
     <div class="popup-content">
-      <img src="asset/foto windah.jpg" alt="Foto" />
+      <img src="https://files.catbox.moe/sv7176.jpeg" alt="Foto" />
       <p>Haloo kak Jen… Mau ngomong nii, maluu tapi HAHAHA. Ngl, i still think about you. Udah coba berbagai cara juga buat mup on tuh tapi tetep aja keinget ke kamu lagi bawaannya.
 Keinget terus sampe-sampe kangen gimana dulu kita ngobrol, kangen nge-jokes juga, sama kak jen tuh veda banget vibesnya. Disini, aku harap kak jen mau baca sampe akhir. Jadi, 
 can you do me a favor? to try again, to start everything over, i really want to fix everything. 
@@ -39,4 +39,5 @@ Kalau kamu masih open for it, aku pengen kita mulai lagi pelan-pelan, no pressur
 
 </body>
 </html>
+
 
